--- a/Bootstrap_Bootcamp_Files/FINALCourseFiles/Section_04_Basics/Exercise/exercise1-solution.html
+++ b/Bootstrap_Bootcamp_Files/FINALCourseFiles/Section_04_Basics/Exercise/exercise1-solution.html
@@ -57,7 +57,7 @@
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptates repudiandae quos
                 sed at dolorum mollitia hic ad ullam necessitatibus?</p>
             <a href="" class="btn btn-success btn-lg">Try it Today!</a>
-        </div>s
+        </div>
     </div>
 
     <style>
